--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -3,10 +3,10 @@ name: Flutter CI For BMI App
 on:
   push:
     branches: 
-      - master
+      - main
   pull_request:
     branches:
-      - master
+      - main
 
 jobs:
   build:
