--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -9,5 +9,5 @@ jobs:
     - uses: actions/first-interaction@v1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        issue-message: 'Hello there! Thank you for creating the issue!'' first issue'
-        pr-message: 'Hello there! Thank you for contributing!'' first pr'
+        issue-message: 'Hello there! Welcome to flutter-awesome-ui library, You made your first issue, Thank you for contributing!'' first issue'
+        pr-message: 'Hello there! Welcome to flutter-awesome-ui library, You made your first pull request, Thank you for contributing!'' first pr'
